--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,56 @@
     --color-body:#918ca4;
 }
 
+html {
+    /* The 62.5% of the 16px is 10px 
+    this just makes the rem calculations easy for us */
+    font-size: 62.5%;
+}
+
 body {
     font-family: Inter,Arial, Helvetica, sans-serif;
     color: var(--color-body);
+    font-size: 2.4rem;
+    line-height: 1.5; /* this sets the line height to 1.5 times of the font size*/
 }
 h1,h2,h3 {
     color: var(--color-headings);
+    margin-bottom: 1rem;
+}
+
+h1 {
+    font-size: 7rem;
+}
+
+h2 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 3rem;
+
+}
+
+p {
+    margin-top: 0;
+}
+
+@media screen and (min-width:1024px) {
+    body {
+        font-size: 1.8rem;
+    }
+    
+    h1 {
+        font-size: 8rem;
+
+    }
+    h2 {
+        font-size: 4rem;
+
+    }
+    h3 {
+        font-size: 2.4rem;
+
+    }
+
 }
