--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
     --color-body:#918ca4;
 }
 
+
+/* typography */
+
 html {
     /* The 62.5% of the 16px is 10px 
     this just makes the rem calculations easy for us */
@@ -58,4 +61,32 @@ p {
 
     }
 
+}
+
+/* Links */
+a {
+    text-decoration: none;
+}
+
+.link-arrow {
+    color: var(--color-accent);
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after {
+    content: "-->";
+    margin-left: 5px;
+    transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+    margin-left: 10px;
+}
+
+@media screen and (min-width:1024px) {
+    .link-arrow {
+        font-size: 1.5rem;
+    }
 }
