--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+
+/* Color Palette */
+
 :root {
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -121,4 +124,17 @@ a {
         font-size: 1.2rem;
     }
     
+}
+
+/* List */
+
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
 }
