--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,22 @@ a {
 }
 
 .list--inline .list__item {
-  display: inline-block;
+  display: inline-block; /*we need inline block so we can add the margins*/
   margin-right: 2rem;
+}
+
+.list--tick {
+   list-style-image: url(../images/tick.svg);
+    padding-left: 3rem; /*usually the svg tick image will be outside the page so we need to add some padding */
+}
+
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem; /*to remove or adjust the vertical space*/
+}
+
+@media screen and (min-width:1024px)  {
+  .list--tick .list__item {
+    padding-left: 0;
+  }
 }
