--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,13 @@
 tag--something is used for the derivative of the class
 tag__something is used for the child of the class
 tag-something is used for clones with different use 
+
+
+we will be using the oops approach here 
+we will be defining the structure and the skins differently
+
+about the buttons as anchor tags
+while using them as buttons the border box property needs to be applied or else the content will flow outside the window
 */
 /* Color Palette */
 
@@ -11,6 +18,12 @@ tag-something is used for clones with different use
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 /* typography */
@@ -183,4 +196,68 @@ a {
   display: inline-flex;
   justify-items: center;
   align-items: center;
+}
+
+/* Button */
+
+.btn {
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 2rem 3rem;
+  text-transform: uppercase;
+  border-radius: 40px;
+  margin: 1rem 0;
+  text-align: center;
+  border: none;
+  white-space: nowrap; /*this is used so that when the space is reduced the text inside the btn should not go to the next line*/
+  cursor: pointer;
+}
+
+.btn--primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.btn--primary:hover {
+  background-color: #3a8ffd;
+}
+
+.btn--secondary {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+.btn--secondary:hover {
+  background-color: #00c8eb;
+
+}
+.btn--accent {
+  background-color: var(--color-accent);
+  color: #fff;
+}
+
+.btn--accent:hover {
+  background-color:#ec3000 ;
+}
+
+.btn--outline {
+  background-color: #fff;
+  color: var(--color-headings);
+  border: 2px solid var(--color-headings);
+}
+
+.btn--outline:hover {
+  color: #fff;
+  background-color: var(--color-headings);
+}
+
+.btn--block {
+  display: inline-block;
+  width: 100%;
+}
+
+@media screen and (min-width:1024px) {
+  .btn {
+    font-size: 1.5rem;
+  }
 }
