--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ while using them as buttons the border box property needs to be applied or else 
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-border:#ccc;
+  --border-radius:30px; 
 }
 
 *,
@@ -277,6 +279,21 @@ a {
   color: #cdcbd7;
 }
 
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1rem;
+}
+
+.input-group .btn {
+  margin: 0;
+}
 @media screen and (min-width:1024px) {
   .input {
     font-size: 1.5rem;
