--- a/css/styles.css
+++ b/css/styles.css
@@ -387,3 +387,21 @@ a {
     font-size: 1.7rem;
   }
 }
+
+/* media */
+
+.media {
+  display: flex;
+}
+
+.media__title {
+  margin: 0;
+}
+
+.media__body {
+  margin: 0 2rem;
+}
+
+.media__image {
+  margin-top: 1rem;
+}
