--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ while using them as buttons the border box property needs to be applied or else 
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-body-darker:#5c5577;
   --color-border:#ccc;
   --border-radius:30px; 
 }
@@ -37,7 +38,7 @@ html {
 }
 
 body {
-  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-family: Inter, Montserrat,Arial, Helvetica, sans-serif;
   color: var(--color-body);
   font-size: 2.4rem;
   line-height: 1.5; /* this sets the line height to 1.5 times of the font size*/
@@ -404,4 +405,51 @@ a {
 
 .media__image {
   margin-top: 1rem;
+}
+
+/* quotes */
+
+.quote {
+  font-size: 3rem;
+  font-style: italic;
+  color: var(--color-body-darker);
+  line-height: 1.3;
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote__author {
+  font-size: 3rem;
+  font-weight: 500;
+  font-style: normal;
+  margin-bottom: 0;
+}
+
+.quote__organization {
+  color: var(--color-headings);
+  opacity: .4;
+  font-size: 2rem;
+}
+
+.quote__line {
+  position: relative;
+  bottom:10px
+}
+
+@media screen and (min-width:1024px) {
+  .quote {
+    font-size: 2rem;
+  }
+  .quote__author{
+    font-size: 2.4rem;
+  }
+  .quote__organization {
+    font-size: 1.6rem;
+  }
 }
