--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,15 @@ a {
   fill: var(--color-primary);
 }
 
+.icon--white {
+  fill: #fff;
+}
+
+.icon--small {
+  width: 30px;
+  height: 30px;
+}
+
 .icon-container {
   background-color: gold;
   width: 64px;
@@ -201,6 +210,9 @@ a {
   align-items: center;
 }
 
+.icon-container--accent {
+  background-color: var(--color-accent);
+}
 /* Button */
 
 .btn {
@@ -469,5 +481,35 @@ a {
 @media screen and (min-width:1024px) {
   .grid--1x3 {
     grid-template-columns: repeat(3,1fr);
+  }
+}
+
+.testimonial {
+  padding: 3rem;
+}
+
+.testimonial__image {
+  position: relative;
+}
+
+.testimonial__image > img {
+  width: 100%;
+}
+
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+
+}
+
+@media screen and (min-width:768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .testimonial .quote  {
+    margin-left: 6rem;
   }
 }
