--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,9 @@ while using them as buttons the border box property needs to be applied or else 
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
-  --color-body-darker:#5c5577;
-  --color-border:#ccc;
-  --border-radius:30px; 
+  --color-body-darker: #5c5577;
+  --color-border: #ccc;
+  --border-radius: 30px;
 }
 
 *,
@@ -38,7 +38,7 @@ html {
 }
 
 body {
-  font-family: Inter, Montserrat,Arial, Helvetica, sans-serif;
+  font-family: Inter, Montserrat, Arial, Helvetica, sans-serif;
   color: var(--color-body);
   font-size: 2.4rem;
   line-height: 1.5; /* this sets the line height to 1.5 times of the font size*/
@@ -122,28 +122,26 @@ a {
 }
 
 .badge--primary {
-    background-color:var(--color-primary);
-    color: #fff;
+  background-color: var(--color-primary);
+  color: #fff;
 }
 .badge--secondary {
-    background-color:var(--color-secondary);
-    color: #fff;
-
+  background-color: var(--color-secondary);
+  color: #fff;
 }
 
 .badge--small {
-    font-size: 1.6rem;
+  font-size: 1.6rem;
 }
 
-@media screen and (min-width:1024px){
-    .badge {
-        font-size: 1.5rem;
-    }
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
 
-    .badge--small {
-        font-size: 1.2rem;
-    }
-    
+  .badge--small {
+    font-size: 1.2rem;
+  }
 }
 
 /* List */
@@ -160,8 +158,8 @@ a {
 }
 
 .list--tick {
-   list-style-image: url(../images/tick.svg);
-    padding-left: 3rem; /*usually the svg tick image will be outside the page so we need to add some padding */
+  list-style-image: url(../images/tick.svg);
+  padding-left: 3rem; /*usually the svg tick image will be outside the page so we need to add some padding */
 }
 
 .list--tick .list__item {
@@ -169,7 +167,7 @@ a {
   margin-bottom: 1rem; /*to remove or adjust the vertical space*/
 }
 
-@media screen and (min-width:1024px)  {
+@media screen and (min-width: 1024px) {
   .list--tick .list__item {
     padding-left: 0;
   }
@@ -244,7 +242,6 @@ a {
 
 .btn--secondary:hover {
   background-color: #00c8eb;
-
 }
 .btn--accent {
   background-color: var(--color-accent);
@@ -252,7 +249,7 @@ a {
 }
 
 .btn--accent:hover {
-  background-color:#ec3000 ;
+  background-color: #ec3000;
 }
 
 .btn--outline {
@@ -266,12 +263,17 @@ a {
   background-color: var(--color-headings);
 }
 
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .btn--block {
   display: inline-block;
   width: 100%;
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
   .btn {
     font-size: 1.5rem;
   }
@@ -307,7 +309,7 @@ a {
 .input-group .btn {
   margin: 0;
 }
-@media screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
   .input {
     font-size: 1.5rem;
   }
@@ -338,13 +340,11 @@ a {
 .card-container {
   width: 30%;
   padding: 4rem;
-  
-  
 }
 
 /* plans */
 .plan__name {
-  color:#fff;
+  color: #fff;
   margin: 0;
   font-weight: 500;
   font-size: 2.4rem;
@@ -385,7 +385,7 @@ a {
   right: 5%;
 }
 
-@media  screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
   .plan__name {
     font-stretch: 1.4rem;
   }
@@ -445,20 +445,20 @@ a {
 
 .quote__organization {
   color: var(--color-headings);
-  opacity: .4;
+  opacity: 0.4;
   font-size: 2rem;
 }
 
 .quote__line {
   position: relative;
-  bottom:10px
+  bottom: 10px;
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
   .quote {
     font-size: 2rem;
   }
-  .quote__author{
+  .quote__author {
     font-size: 2.4rem;
   }
   .quote__organization {
@@ -472,15 +472,15 @@ a {
   display: grid;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .grid--1x2 {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
   .grid--1x3 {
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -500,16 +500,56 @@ a {
   position: absolute;
   top: 3rem;
   right: -32px;
-
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .testimonial .quote,
   .testimonial .quote__author {
     font-size: 2.4rem;
   }
 
-  .testimonial .quote  {
+  .testimonial .quote {
     margin-left: 6rem;
+  }
+}
+
+/* Callouts */
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+
+.callout--primary {
+  background: var(--color-primary);
+  color: #fff;
+}
+
+.callout__heading {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+
+.callout__content {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+
+  .callout__content {
+    text-align: left;
+  }
+
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
   }
 }
