--- a/css/styles.css
+++ b/css/styles.css
@@ -553,3 +553,40 @@ a {
     margin: 0 2rem;
   }
 }
+
+
+/* collapsible */
+
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collapsible__header .icon {
+  justify-self: end;
+}
+
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  transition: transform .3s;
+}
+
+.collapsible__content {
+  max-height: 0;
+  opacity: 0;
+  transition: all .3s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+  max-height: 100vh;
+  opacity: 1;
+}
