--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,6 @@ a {
   }
 }
 
-
 /* collapsible */
 
 .collapsible__heading {
@@ -574,13 +573,13 @@ a {
 
 .collapsible__chevron {
   transform: rotate(-90deg);
-  transition: transform .5s;
+  transition: transform 0.5s;
 }
 
 .collapsible__content {
   max-height: 0;
   opacity: 0;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .collapsible--expanded .collapsible__chevron {
@@ -649,14 +648,13 @@ a {
 .nav__item {
   padding: 0.5rem 2rem;
   border-bottom: 1px solid #222;
-
 }
 
-.nav__item>a {
+.nav__item > a {
   color: #d2d0db;
-  transition: color .3s;
+  transition: color 0.3s;
 }
-.nav__item>a:hover {
+.nav__item > a:hover {
   color: #fff;
 }
 
@@ -666,7 +664,7 @@ a {
 
 .nav__toggler {
   opacity: 0.5;
-  transition: box-shadow .15s;
+  transition: box-shadow 0.15s;
 }
 
 .nav.collapsible--expanded .nav__toggler {
@@ -679,7 +677,7 @@ a {
   transform: translateY(5px);
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .nav__toggler {
     display: none;
   }
@@ -690,7 +688,6 @@ a {
     font-size: 1.6rem;
     max-height: 100%;
     opacity: 1;
-
   }
 
   .nav__item {
@@ -715,7 +712,11 @@ a {
   width: 100%;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 0;
+  }
+
   .hero__content {
     text-align: left;
     align-self: center;
