--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,7 @@ a {
   padding: 2rem 3rem;
   text-transform: uppercase;
   border-radius: 40px;
+  outline:none;
   margin: 1rem 0;
   text-align: center;
   border: none;
@@ -274,6 +275,13 @@ a {
   width: 100%;
 }
 
+.btn--icon {
+  width: 2rem;
+  height: 2rem ;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  vertical-align: middle;
+}
 @media screen and (min-width: 1024px) {
   .btn {
     font-size: 1.5rem;
@@ -304,7 +312,7 @@ a {
 .input-group .input {
   border: 0;
   flex-grow: 1;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .input-group .btn {
@@ -720,5 +728,33 @@ a {
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+}
+
+
+/* Domain Block */
+
+.block__domain .input-group {
+  box-shadow: 0 0 30px 20px #e6ebee;
+  border: 0;
+  margin: 4rem auto ;
+  max-width: 670px;
+}
+
+.block-domain__prices {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(2,6rem);
+  font-size: 2rem;
+  font-weight: 600;
+  justify-items: center;
+  align-items: center;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width:768px) {
+  .block-domain__prices {
+    grid-template-columns: repeat(auto-fit,minmax(10rem,1fr));
   }
 }
